--- a/index.css
+++ b/index.css
@@ -1,146 +1,123 @@
 body {
-    background: gray;
-    width: 99%;
-    height: 100px;
-}
-
-#header-lista { 
-    margin-left: 70px ;
-    text-align: center;
-    background: red;
-    color: white;
-    width: auto;
-    height: auto;
-}
-
-#lista-de-tareas {
-    text-align: center;
-    font-size: auto;
-}
-
-#div-todo{
-  width: auto;
-  height: auto;
-}
-
-#div-center {
-    text-align: center;
-    width: 100%;
-    height: auto;
+    background-color: gray;
     
+}
+
+
+#h1 {
+    font-size: 3.5rem;
+    text-align: center;
+    color: black;
+}
+
+#formulario {
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 #input-escribir {
+    font-size: 1.5rem;
     text-align: center;
-    background: black;
+    border-radius: 2rem;
+    width: 10rem;
+    height: 3rem;
+    color: blue;
+    margin: 0.5rem;
+}
+
+#btn-agg{
+    width: 3rem;
+    height: 3rem;
+    border-radius: 45%;
+    margin-left: 1rem;
+}
+
+#btn-agg:hover {
+    background-color: green;
     color: white;
+}
+
+.div-todo {
+    margin: 0 auto;
+}
+ul{
+    margin: 1rem 2rem;
+    width: auto;
+    height: auto;
+    display: flex;
+    list-style: none; 
+    align-items: center;
+    padding: 0;
     
 }
-#boton-agregar {
-    position: static;
-  background: red;
-  color: white;
-  top: 16px;
+
+
+
+.list{
+    display: flex;
+    justify-content: center;
+    margin-right: 0 auto;
 }
 
-#hr {
+#botonl {
+    width: 3rem;
+    height: 3rem;
+    border-radius: 100%;
+    margin-left: 0;
+}
+
+#botonl:hover {
+    background-color: yellowgreen;
+    color: white;
+}
+
+.botonb {
+
+    width: 3rem;
+    height: 3rem;
+    border-radius: 100%;
+    margin: 0.5rem;
+}
+.botonb:hover {
+    background-color: red;
+    color: white;
+}
+
+#li {
+    font-size: 2rem;
+    margin: 0 1rem 0 1rem;
+   list-style: none;
+   margin: 0 1rem 0 1rem;
+}
+
+#contenedor {
+    text-align: center;
+    background-color: rgb(189, 176, 176);
     width: 100%;
+    height: 12rem;
+    overflow-y: scroll ;
+    word-break: break-all;
+
+}
+#contadores {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
-#input-boton {
-    width: 100%;
-       
-}
 
-.boton-eliminar {
-    background: red;
-    color: white;
-}
 
-#ul {
-    list-style: none;
-   text-align: center;
-   width: 70%;
-   height: 150px;
-   overflow-y: scroll;
-}
 
-#boton-borrar {
-    text-align: center;
-}
-#borrar {
-    background: red;
-    color: white;
-}
-         /* movil */
- @media only screen and (max-width : 425px) {
-    body {
-        background: rgb(187, 187, 187);
-    }
-    #div-todo {
-        flex-direction: column;
-    }
-    #header-lista {
-        background: blue;
-        width: 210px;
-    }
-    #lista-de-tareas {
-        color: black;
-    }
-    #input-escribir {
-        background: blue;
-        color: white;
-    }
 
-    #boton-agregar {
-        background: blue;
-        color: black;
-    }
-    .boton-eliminar {
-     background: red;
-     color: black;
-    }
 
- }
-           /* escritorio */
- @media only screen and (min-width : 426px) {
-   #header-lista {
-    display: block;
-    text-align: center;
-    width: 1200px;
-    height: 60px;
-   }
-   #lista-de-tareas {
-    font-size: 50px;
-   }
-   #input-escribir {
-    text-align: center;
-    background: black;
-    color: white;
-    width: 600px;
-    height: 40px;
-   }
-   #boton-agregar {
-    position: static;
-    background: red;
-     color: white;
-     width: 120px;
-     height: 45px;
-     font-size: 25px;
-   }
-   #input-boton {
-     width: 100%;
-   }
-   #ul {
-    text-align: center;
-    width: 1200px;
-    height: 150px;
-   }
-   #borrar {
-    width: 120px;
-    height: 45px;
-    font-size: 15px;
-   }
-   }
-   
+
+
+
+
+
+
+
+
+    
     
